--- a/style.css
+++ b/style.css
@@ -15,10 +15,6 @@
 {
     margin-top:10px;
 }
-.current h6
-{
-    font-size:1.5rem;
-}
 
 
 .weather-input input{
@@ -68,9 +64,9 @@
    
 
 }
-/* .current h6{
+.current h6{
     font-size: 1.5rem;
-} */
+}
 .current h3{
     text-align: center;
 
@@ -157,6 +153,7 @@
         flex-direction: column;
 
     }
+ 
     .part1
     {
         display:block;
@@ -193,6 +190,7 @@
     padding: 0 10px;
     color: #999;
   }
+
 
 
 
